formulare oprava a obrazky, zarovnani kraje

--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ p {
     text-align: center;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 .left-text {
     text-align: left;
     font-size: 1.1rem;
@@ -53,6 +58,12 @@ body {
     font-family: "Open Sans", sans-serif;
     background-color: #ffffff;
     color: dimgray;
+    width: 100%;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 img {
@@ -124,6 +135,10 @@ img {
 .carousel-caption-heading-mobile {
     font-family: 'Dancing Script', cursive;
     font-size: 1rem !important;
+}
+.carousel-inner {
+    margin: 0;
+    padding: 0;
 }
 
 .countdown-container {
